<resources>
    <string name="app_name">WetKlinikMobileApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_clinic">Clinic</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_pets">PetsActivity</string>
    <string name="title_activity_datatable">DatatableActivity</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="clinicName">Nazwa kliniki:</string>
    <string name="noConnection">Brak połączenia z internetem</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="goToEmployeeText">Poznaj nasz personel</string>
    <string name="action_sign_out">Wyloguj</string>
    <string name="action_clinic">Klinika</string>
    <string name="action_pets">Zwierzęta</string>
    <string name="action_settingspl">Ustawienia</string>
    <string name="action_calendarpl">Kalendarz</string>
    <string name="tvPetHeight">Wysokość</string>
    <string name="tvPetLength">Długość</string>
    <string name="tvPetDesc">Twój Opis</string>
    <string name="tvClinicOpen">Godziny otwarcia</string>
    <string name="promptPassword">Hasło</string>
    <string name="btnLogin">Zaloguj się</string>
    <string name="btnChangePassword">Zmień hasło</string>
    <string name="etOldPassword">Stare hasło</string>
    <string name="etNewPassword">Nowe hasło</string>
    <string name="etConfirmNewPassword">Powtórz hasło</string>
    <string name="txtChange">Zmień</string>
    <string name="txtCancel">Anuluj</string>
    <string name="dialogChangePassword">Zmień hasło</string>
    <string name="errorNoConnection">Brak połączenia z internetem</string>
    <string name="errorNewPassword">Nowe hasło jest nieporawne</string>
    <string name="errorConfirmPassword">Proszę podać to samo hasło</string>
    <string name="toastSuccessChangePassword">Hasło zostało zmienione</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_employee_list">Employees</string>
    <string name="title_employee_detail">Employee Detail</string>
    <string name="title_pet_list">Pets</string>
    <string name="title_pet_detail">Pet Detail</string>
    <string name="tvBreed">Rasa</string>
</resources>
