<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.asztar.wetklinikmobileapp.MenuBase">

    <item
        android:id="@+id/action_clinic"
        android:orderInCategory="100"
        android:title="@string/action_clinic" />
    <item
        android:id="@+id/action_pets"
        android:orderInCategory="100"
        android:title="@string/action_pets" />

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/action_calendarpl" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settingspl" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out" />
</menu>
